<resources>
    <string name="app_name">BasketScore</string>
    <string name="game_result">GAME RESULT</string>
    <string name="teamA">TEAM A</string>
    <string name="teamB">TEAM B</string>
    <string name="score">0</string>
    <string name="two_points">2 Points</string>
    <string name="three_points">3 Points</string>
    <string name="free_throw">FREE THROW</string>
    <string name="reset">Reset</string>
</resources>
