<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.orangecorn.basketscore.MainActivity">


    <TextView
        android:id="@+id/teamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/teamA"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@id/centralLine"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/teamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/teamB"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/centralLine"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/score_teamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="minusPointA"
        android:text="@string/score"
        android:textColor="@color/colorBlack"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/centralLine"
        app:layout_constraintTop_toBottomOf="@id/teamA" />

    <TextView
        android:id="@+id/score_teamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="minusPointB"
        android:text="@string/score"
        android:textColor="@color/colorBlack"
        android:textSize="36sp"
        app:layout_constraintLeft_toRightOf="@id/centralLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teamB" />

    <Button
        android:id="@+id/two_points_teamA"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:onClick="twoPointClickA"
        android:text="@string/two_points"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/centralLine"
        app:layout_constraintTop_toBottomOf="@id/score_teamA" />

    <Button
        android:id="@+id/two_points_teamB"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:onClick="twoPointClickB"
        android:text="@string/two_points"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/centralLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_teamB" />

    <Button
        android:id="@+id/three_points_teamA"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:onClick="threePointClickA"
        android:text="@string/three_points"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/centralLine"
        app:layout_constraintTop_toBottomOf="@id/two_points_teamA" />

    <Button
        android:id="@+id/three_points_teamB"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:onClick="threePointClickB"
        android:text="@string/three_points"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/centralLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/two_points_teamB" />

    <Button
        android:id="@+id/free_points_teamA"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:onClick="freePointClickA"
        android:text="@string/free_throw"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/centralLine"
        app:layout_constraintTop_toBottomOf="@id/three_points_teamA" />

    <Button
        android:id="@+id/free_points_teamB"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:onClick="freePointClickB"
        android:text="@string/free_throw"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toRightOf="@id/centralLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/three_points_teamB" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="reset"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />

    <ImageView
        android:id="@+id/centralLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/teamA"
        app:layout_constraintRight_toLeftOf="@id/teamB"
        app:layout_constraintTop_toTopOf="@id/teamA"
        app:srcCompat="@drawable/line" />

</android.support.constraint.ConstraintLayout>
